Fix `Product Rating` styles & alignment (https://github.com/woocommerce/woocommerce-blocks/pull/10097)
* Fix alignment not working on the editor

* Fix style regression on rating

--- a/plugins/woocommerce-blocks/assets/js/base/components/product-rating/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/product-rating/style.scss
@@ -54,9 +54,13 @@
 	}
 
 	&__container {
-		display: flex;
-		align-items: center;
-		column-gap: $gap-smaller;
+		> * {
+			vertical-align: middle;
+		}
+	}
+
+	&__reviews_count {
+		margin-left: $gap-smaller;
 	}
 
 	&__norating-container {
